--- a/demos/multiple-events/index.html
+++ b/demos/multiple-events/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiple Events</title>
 </head>
+
 <body>
+    <form action="" id="add-friend">
+    <label for="first-name"> First Name </label>
+    <input type="text" id="first-name">
+    <button>Add Friend</button>
+    </form>
     <ul id="friend-list">
         <li> Emma <button>Unfriend</button></li>
         <li> Dale <button>Unfriend</button></li>
