--- a/demos/multiple-events/index.html
+++ b/demos/multiple-events/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiple Events</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
     <button>Add Friend</button>
     </form>
     <ul id="friend-list">
-        <li> Emma <button>Unfriend</button></li>
+        <li class="friends-list"> Emma <button>Unfriend</button></li>
         <li> Dale <button>Unfriend</button></li>
         <li> Emmet <button>Unfriend</button></li>
         <li> Abigail <button>Unfriend</button></li>    
