basic JS logic and html config finished

--- a/demos/data-attributes-demo/index.html
+++ b/demos/data-attributes-demo/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <ul id="cars">
-        <li data-model="model 3" data-year="2014">  Tesla </option>
-        <li data-model="crv" data-year="2017"> Honda </option>
-        <li data-model="focus" data-year="2011" data-condition="poor"> Ford </option>
-        <li data-model="prius" data-year="2015"> Toyota</option>
+        <li data-id="1234"data-model="model 3" data-year="2014">  Tesla </option>
+        <li data-id="5678"data-model="crv" data-year="2017"> Honda </option>
+        <li data-id="910112"data-model="focus" data-year="2011" data-condition="poor"> Ford </option>
+        <li data-id="34215"data-model="prius" data-year="2015"> Toyota</option>
     </ul>
 
     <script src="app.js"></script>
